<resources>
    <string name="app_name">Navigation</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="registration">Registration</string>
    <string name="view_registration">View Registration</string>
    <string name="user_info">View user info</string>
    <string name="logout">Log out</string>

</resources>